package main.java.client.gui.azioniLoggato;

import main.java.client.gui.TemplateGUI;

import javax.swing.*;

public class ListaPreferitiGUI extends TemplateGUI {

    public ListaPreferitiGUI(JFrame frame) {
        super(frame);
        this.frame = frame;
    }
}
